# cmd/api/core/openapi/helper.go
@@ -1,0 +1,5 @@
+package openapi
+
+const (
+	DateFormat = "2006-01-02"
+)
